# Rux

./: .gitignore  CLAUDE.md  Cargo.toml  Kernel.toml  LICENSE  Makefile  README.md  build_user_programs.sh  test_riscv.sh
.cargo/: config.toml
docs/: CHANGELOG.md  CODE_REVIEW.md  DESIGN.md  DEVELOPMENT_WORKFLOW.md  GIC_SMP.md  IPI_TESTING.md  MMU_DEBUG.md  PSCI_DEBUG.md  QUICKREF.md  README.md  RISCV64.md  STRUCTURE.md  TODO.md  UNIT_TEST.md  USER_PROGRAM_DEBUG.md
kernel/: Cargo.toml  build.rs  embed_user_programs.sh
kernel/.cargo/: config.toml
kernel/src/: cmdline.rs  collection.rs  config.rs  console.rs  embedded_user_programs.rs  errno.rs  init.rs  linker-aarch64.ld  list.rs  main.rs  print.rs  sbi.rs  signal.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.S  boot.rs  context.rs  cpu.rs  ipi.rs  mm.rs  mod.rs  smp.rs  syscall.rs  trap.S  trap.rs  user_program.S
kernel/src/arch/aarch64/boot/: boot.S  boot.rs  mod.rs
kernel/src/arch/aarch64/mm/: mm.rs  mod.rs
kernel/src/arch/riscv64/: boot.S  boot.rs  context.rs  cpu.rs  ipi.rs  linker.ld  mm.rs  mod.rs  smp.rs  syscall.rs  trap.S  trap.rs  user_program.S  usermode_asm.S
kernel/src/desktop/: mod.rs
kernel/src/drivers/: mod.rs  virtio_probe.rs
kernel/src/drivers/blkdev/: mod.rs
kernel/src/drivers/gpu/: fb_simple.rs  fbdev.rs  framebuffer.rs  mod.rs  virtio.rs.disabled  virtio_cmd.rs  virtio_gpu.rs
kernel/src/drivers/intc/: clint.rs  gic.rs  gicv3.rs  mod.rs  plic.rs
kernel/src/drivers/keyboard/: mod.rs  ps2.rs
kernel/src/drivers/mouse/: mod.rs  ps2.rs
kernel/src/drivers/net/: loopback.rs  mod.rs  space.rs  virtio_net.rs
kernel/src/drivers/pci/: mod.rs
kernel/src/drivers/timer/: armv8.rs  mod.rs  riscv64.rs
kernel/src/drivers/virtio/: mod.rs  offset.rs  probe.rs  queue.rs  virtio_pci.rs
kernel/src/fs/: bio.rs  buffer.rs  char_dev.rs  dentry.rs  elf.rs  file.rs  inode.rs  mod.rs  mount.rs  path.rs  pipe.rs  procfs.rs  rootfs.rs  stat.rs  superblock.rs  vfs.rs
kernel/src/fs/ext4/: allocator.rs  dir.rs  extent.rs  file.rs  indirect.rs  inode.rs  mod.rs  superblock.rs
kernel/src/graphics/: double_buffer.rs  font.rs  mod.rs
kernel/src/gui/: cursor.rs  mod.rs
kernel/src/gui/widgets/: mod.rs
kernel/src/input/: mod.rs
kernel/src/mm/: allocator.rs  buddy_allocator.rs  meminfo.rs  mod.rs  page.rs  page_desc.rs  pagemap.rs  pcp.rs  slab.rs  vma.rs
kernel/src/net/: arp.rs  buffer.rs  ethernet.rs  mod.rs  tcp.rs  udp.rs
kernel/src/net/ipv4/: checksum.rs  mod.rs  route.rs
kernel/src/process/: fork.rs  list.rs  mod.rs  pid.rs  sched.rs  task.rs  test.rs  usermod.rs  wait.rs
kernel/src/sched/: mod.rs  pid.rs  sched.rs
kernel/src/sync/: condvar.rs  mod.rs  semaphore.rs
kernel/src/tests/: arc_alloc.rs  boundary.rs  dcache.rs  execve.rs  ext4_allocator.rs  ext4_file_write.rs  ext4_indirect_blocks.rs  fcntl.rs  fdtable.rs  file_flags.rs  file_open.rs  fork.rs  fstat.rs  getpid.rs  heap_allocator.rs  icache.rs  ipc_epoll.rs  ipc_eventfd.rs  ipc_poll.rs  link.rs  listhead.rs  mem_cow.rs  mem_mmap.rs  mkdir_unlink.rs  mod.rs  network.rs  page_allocator.rs  path.rs  pipe2.rs  preemptive_scheduler.rs  process_tree.rs  quick.rs  scheduler.rs  signal.rs  signal_procmask.rs  sleep_wakeup.rs  smp.rs  smp_schedule.rs  standard_alloc.rs  tcp_handshake.rs  (+4 more)
test/: .gitignore  README.md  all.sh  build_rootfs.sh  build_user_programs.sh  create_ext4_image.sh  create_ext4_simple.sh  debug.sh  debug_kernel.sh  debug_riscv.sh  mkrootfs.sh  quick_test.sh  run.sh  run_ext4.sh  run_pci.sh  run_riscv.sh  run_riscv64.sh  run_unit_tests.sh  run_with_rootfs.sh  test.sh  test_ipi.sh  test_qemu.sh  (+5 more)
userspace/: Cargo.toml  Makefile  README.md  build  build.sh  cshell_musl.ld  musl.ld  user.ld
userspace/.cargo/: config.toml
userspace/cshell/: Makefile  shell
userspace/cshell/src/: shell.c
userspace/desktop/: Cargo.toml
userspace/desktop/src/: main.rs
userspace/hello_world/: Cargo.toml  asm_start.S  user.ld
userspace/hello_world/src/: main.rs
userspace/infinite_loop/: Cargo.toml
userspace/infinite_loop/src/: main.rs
userspace/infinite_loop_test/: Cargo.toml
userspace/infinite_loop_test/src/: main.rs
userspace/libs/gui/: Cargo.toml
userspace/libs/gui/src/: cursor.rs  double_buffer.rs  font.rs  framebuffer.rs  lib.rs  widgets.rs  window.rs
userspace/rust-shell/: Cargo.toml
userspace/rust-shell/src/: main.rs
userspace/shell/: Cargo.toml  Makefile
userspace/shell/src/: main.rs  shell.c
userspace/simple_test/: Cargo.toml
userspace/simple_test/src/: main.rs
userspace/tests/: Makefile  minimal.c
userspace/toybox/: .gitignore  build-toybox.sh
(+27 files in other folders)
