[package]
name = "rux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
bitflags = { workspace = true }
spin = { workspace = true }
linked_list_allocator = "0.10"

[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[build-dependencies]
toml = "0.8"

[features]
default = ["riscv64"]
aarch64 = []
x86_64 = []
riscv64 = []
debug_log = []  # 启用详细的debug日志
unit-test = []  # 启用单元测试（仅在测试时使用）

[[bin]]
name = "rux"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug-assertions = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
